# ai-proxy-poc

./: .env.example  .gitignore  Makefile  README.md
proxy-api/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
proxy-api/alembic/: env.py
proxy-api/alembic/versions/: 20260420_000001_initial_schema.py  20260420_000002_identity_split.py  20260420_000003_guest_reuse_and_session_limits.py  20260420_000004_auth_conflict_tickets.py  20260420_000005_chat_history.py  20260423_000006_chat_message_outcomes.py  20260427_000007_chat_message_error_schema_cleanup.py  20260428_000008_chat_history_metadata_and_memory.py
proxy-api/app/: __init__.py  main.py
proxy-api/app/api/: __init__.py  health.py  router.py
proxy-api/app/api/v1/: __init__.py  api.py
proxy-api/app/auth/: __init__.py  cleanup.py  conflict_tickets.py  cookies.py  encryption.py  guest_sessions.py  keys.py  microsoft_oauth.py  session_lifecycle.py  session_policy.py  types.py
proxy-api/app/config/: __init__.py  ai.py  chat_instructions.py  chat_outcomes.py  settings.py  time.py
proxy-api/app/config/providers/: __init__.py  anthropic.py  openai.py  vertex.py
proxy-api/app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
proxy-api/app/db/: __init__.py
proxy-api/app/db/postgres/: __init__.py  (+3 more)
proxy-api/app/providers/: __init__.py  catalog.py  dispatcher.py  types.py
proxy-api/app/schemas/: __init__.py  auth.py  authentication.py  chat.py  model.py  usage.py
proxy-api/app/services/: __init__.py  auth.py  auth_security.py  microsoft_auth.py  model_registry.py  usage.py
(+138 files in other folders)
