[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-proxy-api"
version = "0.1.0"
description = "Editable install metadata for local IDE import resolution."
requires-python = ">=3.13"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
